Modification done in code and added try-with-resource